--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.6.2",
     "bootstrap": "^4.5.2",
+    "components": "^0.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-elastic-carousel": "^0.7.5",
+    "react-icons": "^3.11.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "styled": "^1.0.0",
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
