--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.13.1",
     "react-elastic-carousel": "^0.7.5",
     "react-icons": "^3.11.0",
+    "react-leaf-carousel": "^2.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-vertical-timeline-component": "^3.0.2",
