--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.6.2",
     "bootstrap": "^4.5.2",
     "components": "^0.1.0",
+    "firebase": "^7.20.0",
     "react": "^16.13.1",
     "react-collapsible": "^2.8.0",
     "react-dom": "^16.13.1",
