--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "fcode-tuyen-member",
+  "homepage": "https://huybui38.github.io/fcode-tuyen-member",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
